# BSUIR_Labs_Methods-of-information-protection

./: .gitignore  gost28147_89.cpp  main.cpp  readme.md  utils.cpp  Лабораторные МЗИ 2023.docx
LR1/: CMakeLists.txt  GOST_28147-89.ts  gost28147_89.cpp  gost28147_89.hpp  index.ts  main.cpp  package-lock.json  package.json  secret_parameters.hpp  utils.cpp  utils.ts  ~$Отчёт.docx  Отчёт.docx
LR1-CPP/: CMakeLists.txt  gost28147_89.cpp  gost28147_89.hpp  main.cpp  utils.cpp  utils.hpp
LR1/gost28147_89/: gost28147_89.cpp  gost28147_89.hpp
LR1/utils/: utils.hpp
LR2/: CMakeLists.txt  main.cpp  secret_parameters.hpp
LR2/STB_34_101_31_2011/: constants.hpp  stb_34_101_31_2011.cpp  stb_34_101_31_2011.hpp
LR2/STB_34_101_31_2011/core/: constants.hpp  core.cpp  core.hpp
LR2/STB_34_101_31_2011/gamming_with_reversal_connection/: gamming_with_reversal_connection.cpp  gamming_with_reversal_connection.hpp
LR2/STB_34_101_31_2011/simple_exhange/: simple_exchange.cpp  simple_exchange.hpp
LR2/utils/: utils.cpp  utils.hpp
LR3/: CMakeLists.txt  main.cpp  Отчёт.docx
LR3/rabin/: rabin.cpp  rabin.hpp
LR4/: encrypt.txt  input.txt  main.py  mc_elise.py  mc_elise_data.py
LR4n/: decoder.py  encoder.py  encrypted.txt  input.txt  keygen.py  main.py  output.txt  proto.txt  utils.py  Отчёт.docx
LR5/: Отчёт.docx
LR6/: CMakeLists.txt  ECPoint.hpp  base.hpp  gost.hpp  main.cpp
LR6n/: data.py  ec.py  gost3410.py  main.py  ~$Отчёт.docx  Отчёт.docx
LR7/: ElGamal.py  data.py  decrypted.txt  ellipticcurve.py  encrypted.txt  input.txt  main.py  Отчёт.docx
LR8b/: Отчёт.docx
(+29 files in other folders)
